@@ -78,6 +78,7 @@ static int scmp(SEXP x, SEXP y, Rboolean nalast)
     if (x == NA_STRING && y == NA_STRING) return 0;
     if (x == NA_STRING) return nalast?1:-1;
     if (y == NA_STRING) return nalast?-1:1;
+    if (x == y) return 0;  /* same string in cache */
     return STRCOLL(translateChar(x), translateChar(y));
 }
 
